@@ -24,6 +24,8 @@
 
 require(dirname(__FILE__) . '/init.php');
 
+list($page) = getRequestVar(array('page'));
+
 //Prevent error
 if (!$gallery->session->albumName) {
 	header("Location: " . makeAlbumHeaderUrl());
@@ -1057,7 +1059,7 @@ if ($numPhotos) {
 					   array("set_albumName" => $myAlbum->fields["name"]));
 
 				/* Watermarking support is enabled and user is allowed to watermark images/albums */
-				if (strlen($gallery->app->watermarkDir) && $myAlbum->numPhotos(1)) {
+				if (!empty($gallery->app->watermarkDir) && $myAlbum->numPhotos(1)) {
 					showChoice(_("Watermark Album"), "watermark_album.php", array("set_albumName" => $myAlbum->fields["name"]));
 				}
                                 if ($gallery->user->canViewComments($myAlbum) &&
