@@ -1,3 +1,11 @@
+2004-09-08  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b171
+
+	* Fix: view_album wasn't honoring $page
+
+	* Fix: PHP notice about unset watermark var in view_album
+
+	* Fix: Correct save_photos when using methods other than Form
+
 2004-09-08  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b170
 
 	* Fix: Bug in view_photo prevented inline comments from operating
